Fix chrome not wrapping links

--- a/sass/global/index.scss
+++ b/sass/global/index.scss
@@ -132,4 +132,8 @@ img.max-w-40 {max-width: 40%;
         margin-top: 2em;
         margin-bottom: 2em;
     }
+    
+    a {
+        word-break: break-word;
+    }
 }
